ingress/service-kuard.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuard-svc
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    run: kuard
  type: ClusterIP
