ingress/service-nginx-green.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-green-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: nginx-green
  type: ClusterIP
