ingress/service-nginx-main.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-main-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: nginx-main
  type: ClusterIP
