ingress/host-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: host-ingress
spec:
  rules:
  - host: nginx.example.com
    http:
      paths:
      - backend:
          serviceName: nginx-main-svc
          servicePort: 80
  - host: kuard.nginx.example.com
    http:
      paths:
      - backend:
          serviceName: kuard-svc
          servicePort: 8080
  - host: green.nginx.example.com
    http:
      paths:
      - backend:
          serviceName: nginx-green-svc
          servicePort: 80
